# grandrounds

./: .clang-tidy  CMakeLists.txt  README.md  conanfile.txt  vcpkg.json
.github/workflows/: auto-clang-format.yml  ci.yml  codeql-analysis.yml
configured_files/: config.hpp.in
fuzz_test/: fuzz_tester.cpp
puzzles/: cottontail_data.json
share/grandrounds/puzzles/: lake_mendoza_data.json  title_text.txt
src/: CMakeLists.txt  file.cpp  file.hpp  game.cpp  game.hpp  grid.hpp  main.cpp  nonogram.cpp  nonogram.hpp  nonogram_component.cpp  nonogram_component.hpp  nonogram_ftxui.cpp  nonogram_ftxui.hpp  range.hpp
test/: CMakeLists.txt  catch_main.cpp  constexpr_tests.cpp  tests.cpp
